--- a/ArithmeticExpression.Api/appsettings.Development.json
+++ b/ArithmeticExpression.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+  "AllowedCorsOrigins": [
+    "http://localhost:4200"
+  ]
 }
